--- a/src/pages/setting-home/setting-home.html
+++ b/src/pages/setting-home/setting-home.html
@@ -21,14 +21,14 @@
       Synchronization
       <ion-icon name="arrow-forward" item-right></ion-icon>
     </ion-item>
-    <ion-item (click)="getSettingView('formLabelSetting')">
+    <ion-item (click)="getSettingView('dataEntrySetting')">
       <ion-icon name="list" item-left></ion-icon>
-      Form Label
+      Data Entry Form
       <ion-icon name="arrow-forward" item-right></ion-icon>
     </ion-item>
     <ion-item (click)="getSettingView('')">
       <ion-icon name="list" item-left></ion-icon>
-      Data Entry Values Security
+      Security
       <ion-icon name="arrow-forward" item-right></ion-icon>
     </ion-item>
   </ion-item-group>
