add report view as well as dashboard service

--- a/src/pages/report-view/report-view.html
+++ b/src/pages/report-view/report-view.html
@@ -41,7 +41,7 @@
       </ion-card-content>
     </ion-card>
     <!--{{ reportDesignContent }}-->
-    <!--<div class="reportView" [innerHTML]="reportDesignContent"></div>-->
+    <div class="reportView" [innerHTML]="htmlMarkup"></div>
 
   </div>
 </ion-content>
