update view for profile as well as about

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -34,7 +34,7 @@
       <ion-col width="100">
         <div *ngIf="!loadingData">
           <ion-item-group>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               App Information
             </ion-item-divider>
             <ion-item *ngFor="let entry of appInformation ">
@@ -44,7 +44,7 @@
           </ion-item-group>
           <ion-list></ion-list>
           <ion-item-group>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               Data Values Status
             </ion-item-divider>
             <ion-item >
@@ -58,7 +58,7 @@
           </ion-item-group>
           <ion-item-group>
             <ion-list></ion-list>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               System Information
             </ion-item-divider>
             <ion-item *ngFor="let entry of systemInformation">
