--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -35,32 +35,32 @@
       <ion-row>
         <ion-col width="100">
           <ion-item-group>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               App Information
             </ion-item-divider>
             <ion-item *ngFor="let entry of profileInformation">
               <h2>{{ entry.key }}</h2>
               <p>{{ entry.value }}</p>
             </ion-item>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               Assigned Organisation Units
             </ion-item-divider>
             <ion-item *ngFor="let assignOrgUnit of  assignOrgUnits;let currentIndex = index">
               <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignOrgUnit }}</p>
             </ion-item>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               Assigned user roles
             </ion-item-divider>
             <ion-item *ngFor="let userRole of userRoles;let currentIndex = index">
               <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ userRole }}</p>
             </ion-item>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               Assigned programs
             </ion-item-divider>
             <ion-item *ngFor="let assignedProgram of assignedPrograms ;let currentIndex = index">
               <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignedProgram }}</p>
             </ion-item>
-            <ion-item-divider light>
+            <ion-item-divider color="primary">
               Assigned forms
             </ion-item-divider>
             <ion-item *ngFor="let assignedForm  of assignedForms ;let currentIndex = index">
