--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -13,6 +13,20 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
+
+  <ion-grid>
+    <ion-row>
+      <ion-col width="10">
+        <button ion-button small color="favorite" (click)="drawChart()">Draw chart</button><br>
+        <button ion-button small  color="danger" (click)="eraseChart()">Erase chart</button>
+      </ion-col>
+      <ion-col width="90">
+        <div style="overflow: auto;" *ngIf="options.title">
+          <chart [options]="options"></chart>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
