list available dashbord as well as filter dashboard

--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -27,19 +27,6 @@
         </ion-item>
       </ion-list>
     </ion-col>
-    <ion-col (click)="goToView('report')"  >
-      <ion-list>
-        <ion-item>
-          <ion-thumbnail >
-            <img class="menu-app-icon-list" src="assets/img/reports.png">
-          </ion-thumbnail>
-          <h2 >Standard Reports</h2>
-        </ion-item>
-      </ion-list>
-    </ion-col>
-  </ion-row>
-
-  <ion-row>
     <ion-col width-45 (click)="goToView('eventCapture')" >
       <ion-list >
         <ion-item >
@@ -50,6 +37,29 @@
         </ion-item>
       </ion-list>
     </ion-col>
+    <!--<ion-col (click)="goToView('report')"  >-->
+      <!--<ion-list>-->
+        <!--<ion-item>-->
+          <!--<ion-thumbnail >-->
+            <!--<img class="menu-app-icon-list" src="assets/img/reports.png">-->
+          <!--</ion-thumbnail>-->
+          <!--<h2 >Standard Reports</h2>-->
+        <!--</ion-item>-->
+      <!--</ion-list>-->
+    <!--</ion-col>-->
+  </ion-row>
+
+  <ion-row>
+    <!--<ion-col width-45 (click)="goToView('eventCapture')" >-->
+      <!--<ion-list >-->
+        <!--<ion-item >-->
+          <!--<ion-thumbnail >-->
+            <!--<img class="menu-app-icon-list" src="assets/img/eventCapture.png">-->
+          <!--</ion-thumbnail>-->
+          <!--<h2 >Event Capture</h2>-->
+        <!--</ion-item>-->
+      <!--</ion-list>-->
+    <!--</ion-col>-->
     <ion-col width-45 (click)="goToView('dashboard')" >
       <ion-list>
         <ion-item>
@@ -60,6 +70,7 @@
         </ion-item>
       </ion-list>
     </ion-col>
+    <ion-col width-45></ion-col>
   </ion-row>
   <!--<ion-row>-->
     <!--<ion-col width-45 (click)="goToView('trackerCapture')" >-->
