--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -15,13 +15,51 @@
 
 <ion-content >
 
-  <ion-grid>
+  <div *ngIf="loadingData">
+    <ion-list>
+      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+        {{ message }}
+        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+          <ion-spinner name="crescent" color="secondary"></ion-spinner>
+        </div>
+      </ion-item>
+    </ion-list>
+  </div>
 
-    <ion-row>
-      <ion-col >
-        <button ion-button small color="favorite" (click)="drawChart()">Draw chart</button>
-      </ion-col>
-    </ion-row>
+  <div *ngIf="!loadingData">
+    <div *ngIf="dashBoards">
+      <ion-searchbar animated="true" (ionInput)="getFilteredList($event)"></ion-searchbar>
+      <ion-grid>
+        <ion-row>
+          <ion-col width="100">
+            <ion-list>
+              <ion-item *ngFor="let dashBoard of dashBoards" (click)="goToDashBoard(dashBoard)">
+                <ion-icon name="list" item-left></ion-icon>
+                <span >{{ dashBoard.name }}</span>
+              </ion-item>
+              <ion-item *ngIf = "dashBoards.length == 0">
+                There is no dashBoard from the server
+              </ion-item>
+            </ion-list>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </div>
+
+  <ion-grid>
+    <ion-item >
+      <ion-label>Chart Type</ion-label>
+      <ion-select [(ngModel)]="chartType" (ionChange)="changeChart()">
+        <ion-option  value="" >Default</ion-option>
+        <ion-option  value="spline" >Spline</ion-option>
+        <ion-option  value="pie" >Pie</ion-option>
+        <ion-option  value="column" >Column</ion-option>
+        <ion-option  value="bar" >Bar</ion-option>
+        <ion-option  value="area" >Area</ion-option>
+      </ion-select>
+    </ion-item>
 
     <ion-row>
       <ion-col width="100">
