--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -35,7 +35,7 @@
       <ion-item>
         <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
         <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-        <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+        <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
         <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'"  >{{ orgUnit.name }}</span>
       </ion-item>
       <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
@@ -44,7 +44,7 @@
           <ion-item>
             <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
             <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-            <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+            <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
             <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
           </ion-item>
           <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
@@ -53,7 +53,7 @@
               <ion-item>
                 <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                 <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
                 <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'"  >{{ orgUnit.name }}</span>
               </ion-item>
               <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
@@ -62,7 +62,7 @@
                   <ion-item>
                     <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                     <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                    <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                    <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
                     <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
                   </ion-item>
                   <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
@@ -71,7 +71,7 @@
                       <ion-item>
                         <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                         <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                        <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                        <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
                         <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
                       </ion-item>
                       <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
@@ -80,7 +80,7 @@
                           <ion-item>
                             <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                             <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                            <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                            <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
                             <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
                           </ion-item>
                           <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
