adding event list field selections

--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -33,7 +33,7 @@
 
   <div *ngIf="!loadingData">
 
-    <div class="dataEntryFormHeader">
+    <div class="dataEntryFormHeader" (click)="navCtrl.pop()">
       <ion-card>
         <ion-card-content>
           <p><b>Form</b> : {{ selectedDataSetLabel }}</p>
